--- a/Reeves_et_al_2021_Panda_ABM/SOM_Figures.Rmd
+++ b/Reeves_et_al_2021_Panda_ABM/SOM_Figures.Rmd
@@ -64,7 +64,7 @@ OGs_sum <- OGs %>%
             max_d2_source = max(d2source))
 
 kable(OGs_sum[,c(1:7)], 
-      caption = "A summary of number of uses by raw material quality",
+      caption = "A summary of number of Pounding Tool uses by raw material quality",
       col.names = c("Number of Sources", 
                     "Number of Trees", 
                     "Material Quality",
@@ -85,12 +85,12 @@ run_sum <- run_data[run_data$new_trees <= 0] %>%
 nruns_notools <- nrow(run_data[run_data$n_trees_available_start == 0,])/nrow(run_data)
 
 kable(run_sum, 
-      caption = "Runs where the repeated transport of tools did not result in the increased availability of trees",
+      caption = "Runs where the repeated transport of tools did not result in an increase in the number of Tool-use opportunities",
       col.names = c("Number of Sources", "Number of Trees", "Trees Die", "Number of Runs"))
 ```
 
 
-```{r SOM Figure 1, fig.cap= "The relationship between the number of places where it is possible for a nut-cracking event to occur and the number of trees and sources at the beginning of each model run. Increasing both the number of Trees and Sources included in the model has a positive effect on the number of places where nut-cracking events can occur. Note that the Y axis is in log 10 scale"}
+```{r SOM Figure 1, fig.cap= "The relationship between the number of places where it is possible for a tool-use event to occur and the number of trees and sources at the beginning of each model run. Increasing both the number of Trees and Sources included in the model has a positive effect on the number of places where tool-use can occur. Note that the Y axis is in log 10 scale"}
 
 ggplot(run_data, aes(x = as.factor(`N Sources`), y = n_trees_available_start, fill = as.factor(`N Trees`)))+
   geom_boxplot()+
@@ -105,7 +105,7 @@ ggplot(run_data, aes(x = as.factor(`N Sources`), y = n_trees_available_start, fi
 ```
 
 
-```{r SOM_Figure 2, echo=FALSE, warning=FALSE, message= FALSE, fig.height=6, fig.width=6.5, fig.cap=" Both plots showing the maximum distance a _Pounding Tools_ were moved according to their material quality. When the number of Trees is low, material quality has little influence on the maximum distance a _Pounding Tools_ travel, this is due to the fact that there is little opportunity for tools to move substantial distances from their sources. However, as the number of _Trees_ increases, so does the distance _Pounding Tools_ can move from their _Source_. In cases where the number of _Trees_ is great, the maximum distance tools can move is influenced by its raw material quality. Note that a raw material quality of 0 reflects 25% chance of breaking whereas a raw material quanlity of 75 represents a 100% change of breaking."}
+```{r SOM_Figure 2, echo=FALSE, warning=FALSE, message= FALSE, fig.height=6, fig.width=6.5, fig.cap=" Both plots showing the maximum distance _Pounding Tools_ were moved according to their material quality. When the number of Trees is low, material quality has little influence on the maximum distance a _Pounding Tools_ travel, this is due to the fact that there is little opportunity for tools to move substantial distances from their sources. However, as the number of _Trees_ increases, so does the distance _Pounding Tools_ can move from their _Source_. In cases where the number of _Trees_ is great, the maximum distance tools can move is influenced by its raw material quality. Note that a raw material quality of 0 reflects 25% chance of breaking whereas a raw material quality of 75 represents a 100% change of breaking."}
 
 OGs_sum <- OGs %>% 
   group_by(run_id, `N Sources`, `N Trees`, rm_quality) %>% 
@@ -126,7 +126,7 @@ ggplot(OGs_sum, aes(x = as.factor(rm_quality), y = max_d2_source)) +
 ```
 
 
-```{r Tree Growth and Death SOM, echo=FALSE, warning=FALSE, message= FALSE, fig.height=4, fig.width=6.5, fig.cap= "The effect tree death and growth on the maximum distance tools can move from the source. When holding the number of _Trees_ and _Sources_ constant _Pounding Tools_ the maximum distance a pounding tool can move is greater when _Trees_ are able to change their location due to death and regrowth."}
+```{r Tree Growth and Death SOM, echo=FALSE, warning=FALSE, message= FALSE, fig.height=4, fig.width=6.5, fig.cap= "The effect tree death and growth on the maximum distance tools can move from the source. When holding the number of _Trees_ and _Sources_ constant _Pounding Tools_ the maximum distance a pounding tool can move is greater when _Trees_ are able to change their location due to death and regrowth. Black: Static Trees, Grey: Dynamic Trees."}
  
 ggplot(OGs_sum, aes(x = as.factor(`N Sources`), y = max_d2_source, fill = as.factor(treessdie))) + 
   geom_boxplot()+
@@ -139,7 +139,7 @@ ggplot(OGs_sum, aes(x = as.factor(`N Sources`), y = max_d2_source, fill = as.fac
 ```
 
 
-```{r, echo=FALSE, warning=FALSE, message= FALSE, fig.height=4, fig.width=6.5, fig.cap= "The effect tree life cycles on the number of trees that become accessible due to the transport of tools. Black: Static Trees, Grey: Dynamic Trees "}
+```{r, echo=FALSE, warning=FALSE, message= FALSE, fig.height=4, fig.width=6.5, fig.cap= "The effect tree life cycles on the number of trees that become accessible due to the transport of tools. Black: Static Trees, Grey: Dynamic Trees."}
 
 
  ggplot(run_data, aes(x = as.factor(`N Sources`), y = n_trees_available_end, fill = as.factor(treessdie))) +
@@ -171,7 +171,7 @@ tools_sum <- left_join(tools_sum, run_data)
 ```
 
 
-```{r echo=FALSE, warning=FALSE, message= FALSE, fig.height=6, fig.width=6, fig.cap= "The relationship between the number of artifacts found in a grid cell and its distance to the nearest source. Note how the number of _Trees_ attenuates the scale and strength of the distance decay relationship"}
+```{r echo=FALSE, warning=FALSE, message= FALSE, fig.height=6, fig.width=6, fig.cap= "The relationship between the number of artifacts found in a grid cell and its distance to the nearest source. Note how the number of _Trees_ attenuates the scale of the distance-decay relationship"}
 
 ggplot(tools_sum[tools_sum$treessdie == 1,], aes(x = min_d2_source, y= n_tools)) + 
   geom_point() +
