--- a/Reeves_et_al_2021_Panda_ABM/SOM_Figures.Rmd
+++ b/Reeves_et_al_2021_Panda_ABM/SOM_Figures.Rmd
@@ -9,14 +9,14 @@ output:
 knitr::opts_chunk$set(echo = FALSE,
                       warning = FALSE,
                       messages = FALSE,
-                      dev = "png" )
+                      dev = "png",
+                      dpi = 1000)
 
 library(data.table)
 library(dplyr)
 library(ggplot2)
 library(gridExtra)
 library(knitr)
-
 source("../ABM_Functions.R")
 
 ## Figure theme
